<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="item_favorites">Favorites</string>
    <string name="item_contect">Contact</string>
    <string name="item_rate_app">Rate app</string>
    <string name="item_dark_mode">Dark mode</string>
    <string name="item_add_play_list">Playlists</string>
    <string name="item_add_play_list_description">m3u,m3u8,ts files</string>
    <string name="label_playlists">PlayLists</string>
    <string name="add_from_file">Add from file</string>
    <string name="add_from_url">Add from url</string>
    <string name="add_xtream_account">Add Xtream Account</string>
    <string name="add_new_playlist">Add new PlayList</string>
    <string name="enter_your_m3u_url_to_load_it">Enter your m3u url to load it</string>
    <string name="https_www_example_com_playlist_m3u">https://www.example.com/playlist.m3u</string>
    <string name="download_and_save">Download and Save</string>
    <string name="login">Login</string>
    <string name="anya_name">Anya name</string>
    <string name="http_www_example_com_port">http://www.example.com:port</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="please_enter_your_xtream_account_details_to_login">Please enter your Xtream account details to login</string>
    <string name="loading">Loading…</string>
    <string name="please_be_patient">Please be patient</string>
    <string name="retry">Retry</string>
    <string name="no_channels_yet">No Channels yet</string>
    <string name="channel_thumbnail">Channel Thumbnail</string>
    <string name="any_nam_error">Name is reburied</string>
    <string name="m3u_url_error">Please enter a valid m3u url</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_fav">Remove from favorites</string>
    <string name="no_favorites_items_yet">No Favorites items yet !</string>
    <string name="search">Search</string>
    <string name="usern_name_error">Username required</string>
    <string name="xtream_url_error">Xtream url not valid</string>
    <string name="xtream_password_error">Password required</string>
    <string name="network_error_message">Please check your network connection and try again</string>
    <string name="no_playlists_add_new_one">No PlayLists ! Add new one</string>
    <string name="delete">Delete</string>
    <string name="about">About</string>
    <string name="personalized_ads">Personalized ads</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="please_wait">Loading Please Wait</string>
    <string name="legal_terms">Media Player is a simple player that plays user-added content. It never provides playlists or content. This app is intended for use only with user-created playlists of legal content. It is your responsibility to check whether the contents of playlists you create or add are legal and to use and/or save the content. We are not responsible for any copyright or misappropriation of third party Content resulting from the use of the App and please check whether your content is legal and/or if you have the rights to register its use. Selecting the confirmation button and continuing means that you have read and accepted all legal texts.
    \n\n
        <b>LEGAL WARNING</b>\n\n
    - Media Player does not provide or request any content or playlists to users.\n
    - Media Player is not affiliated with any third party provider.\n
    - Users must provide their own content.\n
    - We absolutely do not support the streaming of copyrighted material or content without the permission of the copyright owner.</string>
</resources>